# Salmonbot

./: .env.prod  README.md  pyproject.toml
cqhttp/: config.yml  device.json  session.token
cqhttp/data/: image.db  video.db
cqhttp/data/images/: 025933.ldb  030012.ldb  030013.ldb  030014.ldb  030015.ldb  030016.ldb  030017.ldb  030019.ldb  030021.ldb  030023.ldb  CURRENT.bak  LOG  LOG.old  MANIFEST-025935
cqhttp/data/leveldb-v3/: 047169.ldb  047170.ldb  047171.ldb  047172.ldb  047173.ldb  047174.ldb  047175.ldb  047176.ldb  047177.ldb  047178.ldb  059985.ldb  060045.ldb  060046.ldb  060047.ldb  060048.ldb  060049.ldb  060050.ldb  060051.ldb  060052.ldb  060053.ldb  060054.ldb  060062.ldb  070347.ldb  070348.ldb  070349.ldb  070350.ldb  070351.ldb  070352.ldb  070353.ldb  070354.ldb  070355.ldb  070777.ldb  070778.ldb  070779.ldb  070780.ldb  070781.ldb  070782.ldb  070783.ldb  070784.ldb  070785.ldb  (+50 more)
cqhttp/data/videos/: 000365.ldb  000431.ldb  LOG  MANIFEST-000367
cqhttp/data/voices/: 001DF578-CADC-65CE-A9C0-E1CEBF3DCC8D.amr  009D70CF-A77F-E49F-06BC-F72E47195B82.amr  0129A360-060F-F32D-4AF3-431C55A7A5EB.amr  027DE5B2-42C0-65F3-33DC-8F37E440CB62.amr  02C280E3-E594-F334-452D-1F4E7F5ABB0A.amr  (+232 more)
cqhttp/dumps/: 1657542962.dump  1676022214.dump  1676028794.dump  1676043751.dump  1677756212.dump  1678100137.dump  1678291377.dump
data/BAWiki/: gacha.json
data/manager/: plugin_list.yml
src/: musicAliases.json
src/pics/: plugins.json
src/plugins/: cardrow_sys.py  clearcache.py  daisuke.py  help.py  maimaidx.py  public.py  whoami.py
