[project]
name = "Salmonbot"
version = "0.1.0"
description = "Salmonbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_manager", "nonebot_plugin_bawiki"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
